# HOUSE-PRICE-PREDICTOR

./: .gitattributes  .gitignore  README.md  pyproject.toml
dataanalysis/: EDA.ipynb
dataengineering/: __init__.py  datainjection_todb.py  dbconfig.py  getdata_from_csv.py  loaddata_fromdb.py
house_price_predictor/data_analysis/: EDA.ipynb
house_price_predictor/data_engineering/: INSTRUCTIONS.txt  createdb.sh  current_folder_path.py  dataingestion_todb.py  dbconfig.py  loaddata_fromdb.py  mydb_config.ini
house_price_predictor/model_explanation/: ml_explainability.ipynb
house_price_predictor/modeling/: modeling.ipynb
house_price_predictor/preprocessing_and_modelselection/: modelselction.ipynb
house_price_predictor/resources/: columns.json  data.csv  house_price_predictor.pickle  suburb.json  target_encoder.pickle  weights.html
house_price_predictor/serialization/: model_generator.py  price_predictor.py
house_price_predictor/web_app/: pricepredictor_webapp.py
modelexplanation/: ml_explainability.ipynb
preprocessing_and_modelselection/: modelselction.ipynb
serialization/: price_predictor.py
web_app/: pricepredictor_webapp.py
