[tool.poetry]
name = "house-price-predictor"
version = "0.2.1"
description = "An end-to-end Data Science project to create a web app for predicting house prices in Melbourne"
authors = ["ge0rgeth0mas <georgethomas1912@gmail.com>"]
readme = "README.md"
packages = [{include = "house_price_predictor"}]

[tool.poetry.dependencies]

python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.3"
psycopg2 = "^2.9.5"
sql = "^2022.4.0"
sqlalchemy = "^2.0.7"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
streamlit = "^1.21.0"
eli5 = "^0.13.0"
numpy = "<1.24"
shap = "^0.41.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
